//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.server.storage;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "AggregateStorageProto";
option java_package = "org.spine3.server.storage";

import public "spine/server/aggregate/snapshot.proto";
import public "spine/base/event.proto";

// A record in the storage of events and snapshots of an aggregate type.
//
// Different types of aggregates are managed by different storages.
message AggregateStorageRecord {
    // A timestamp of an event or a snapshot in this record.
    google.protobuf.Timestamp timestamp = 1;

     // string representation of an aggregate id.
    string aggregate_id = 2;

    // A short Protobuf type name of the event.
    string event_type = 3;

    // String representation of EventId.
    string event_id = 4;

    // The version of the aggregate after the event was applied.
    int32 version = 5;

    reserved 6 to 19;

    oneof kind {
        // Event data and context.
        spine.base.EventRecord event_record = 20;

        // Snapshot of the aggregate.
        spine.server.aggregate.Snapshot snapshot = 21;
    }
}

// Event data for an aggregate returned by a storage managing the aggregate.
message AggregateEvents {
    // If present, Snapshot will be used for restoring aggregate state before playing other events.
    spine.server.aggregate.Snapshot snapshot = 1;

    // Event records for the aggregate.
    //
    // If `snapshot` field is present, event records represent a 'tail' of event history of the aggregate.
    // Otherwise, records are full history of the aggregate.
    repeated spine.base.EventRecord event_record = 2;
}


